# generative-handwriting

./: .gitignore  CLAUDE.md  Makefile  README.md  common.py  constants.py  drawing.py  example-stroke.xml  loader.py  mypy.ini  plotting.py  pyproject.toml  train_handwriting_prediction.py  transfer-to-vast-node.sh  visualize.py
.claude/: settings.local.json
generative_handwriting/: .cursorignore  .gitignore  README.md  alphabet.py  callbacks.py  common.py  config.py  constants.py  debug_utils.py  drawing.py  loader.py  model_io.py  monitor_training.py  overfit_example_stroke.py  overfit_prediction_example.py  plotting.py  train_handwriting_prediction.py  train_handwriting_synthesis.py  training_config.py  visualize.py  visualize_predictions.py  visualize_synthesis.py  writer.py
generative_handwriting/model/: attention_mechanism.py  attention_rnn_cell.py  basic_mdn.py  handwriting_models.py  lstm_peephole_cell.py  mixture_density_network.py
generative_handwriting/test/: scratchpad.py  test_basic_mdn.py  test_handwriting_mdn.py  test_handwriting_prediction_batched.py  test_handwriting_prediction_single_batch.py  test_handwriting_synthesis_single_batch.py  test_handwriting_synthesis_single_batch_optimized.py  test_lstm.py  test_lstm_deep_single_stroke.py  test_lstm_simple.py  test_lstm_simple_clean.py  test_lstm_simplest.py  test_mdn.py  test_mdn_loss.py  test_mdn_simple_clean.py  test_nan_stability.py  test_pdf.py
model/: basic_mdn.py  handwriting_mdn.py  handwriting_prediction.py  lstm_peephole_cell.py  scratchpad.py  test_basic_mdn.py  test_handwriting_mdn.py  test_handwriting_prediction.py  test_lstm.py  test_lstm_deep_single_stroke.py  test_lstm_simple.py  test_lstm_simplest.py
test/: test_mdn.py  test_mdn_loss.py
tests/: test_mdn_loss.py
