[tool.flake8]
max-line-length = 120
ignore = ["BLK999", "W503", "PT009"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
line-length = 120
lint.select = ["E4", "E7", "E9", "F", "B", "E501"]
lint.extend-select = ["I"]

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "unit_test: Tests the behavior of one function (unit) in isolation from external infrastructure.",
    "integration_test: Tests the behavior of one function that integrates with external infrastructure.",
    "end_to_end_test: Tests the behavior of a full application, end-to-end."
]
testpaths = [
    "tests"
]

[project]
name = "generating-handwriting"
version = "1.0.0"
description = "A package to recreate the seminal work of Alex Graves in handwriting synthesis."
authors = [{ name = "john", email = "john@johnjlarkin.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.1",
    "aider-install>=0.1.3",
    "scipy>=1.15.1",
    "tensorboard>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.1",
    "pytest>=8.3.4",
    "mypy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generative_handwriting"]